# rules_debian

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  debian.bzl  download.sh  list.sh
example/: BUILD.bazel  README.md  WORKSPACE  download.sh  example.cpp
