load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "example1",
    srcs = ["example.cpp"],
    deps = [
        "@org_boost//libboost-system-dev:cc",
    ],
)

cc_binary(
    name = "example2",
    srcs = ["example.cpp"],
    deps = [
        "@boost-dev//:cc",
        "@boost-system//:cc",
    ],
)
